import("//react-native/common.gni")

config("LibRNDeviceInfoModule_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                ]
}

rn_cxx_component("rndeviceinfomodule") {

  # RS Native module and its dependencies
  sources = [
    "RNDeviceInfoModule.h",
    "RNDeviceInfoModule.cpp",
  ]

  public_configs = [ ":LibRNDeviceInfoModule_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//skia",
  ]

  with_exceptions = true
  with_rtti = true
}